// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderTotalsComponent/> _onShippingLineChange() should call onPayloadChange() with updated payload 1`] = `1`;

exports[`<OrderTotalsComponent/> _onShippingLineChange() should call onPayloadChange() with updated payload 2`] = `
Immutable.Map {
  "custom": true,
  "handle": null,
  "price": "0.00",
  "title": "Free shipping",
}
`;

exports[`<OrderTotalsComponent/> render() should render 1`] = `
<div>
  <dl
    class="row text-right mb-0"
  >
    <dt
      class="col-9 mb-2"
    >
      <div>
        <button
          class="p-0 button focusable btn btn-link"
          id="applied-discount"
          tabindex="0"
          type="button"
        >
          <strong>
            Add discount
          </strong>
        </button>
      </div>
    </dt>
    <dd
      class="col-3 mb-2"
    >
      <span>
        -$5.00
      </span>
    </dd>
    <dt
      class="col-9 mb-2 grey"
    >
      Subtotal
    </dt>
    <dd
      class="col-3 mb-2"
    >
      <span>
        $0.00
      </span>
    </dd>
    <dt
      class="col-9 mb-2"
    >
      <div>
        <button
          class="p-0 focusable btn btn-link"
          id="shipping-lines"
          tabindex="0"
          type="button"
        >
          <strong>
            Add shipping
          </strong>
        </button>
      </div>
    </dt>
    <dd
      class="col-3 mb-2"
    >
      —
    </dd>
    <dt
      class="col-9 mb-2"
    >
      <span
        class="d-block"
      >
        <div>
          <button
            class="p-0 focusable btn btn-link"
            id="taxes"
            tabindex="0"
            type="button"
          >
            <strong>
              Taxes
            </strong>
          </button>
        </div>
      </span>
      <span
        class="d-block grey"
      >
        TVA
         
        20
        %
      </span>
    </dt>
    <dd
      class="col-3 mb-2"
    >
      <br />
      <span
        class="d-block"
      >
        <span>
          $0.00
        </span>
      </span>
    </dd>
    <dt
      class="col-9 mb-2"
    >
      Total
    </dt>
    <dd
      class="col-3 mb-2"
    >
      <strong
        class=""
      >
        <span>
          $0.00
        </span>
      </strong>
    </dd>
  </dl>
</div>
`;

exports[`<OrderTotalsComponent/> render() should render with taxes included 1`] = `
<div>
  <dl
    class="row text-right mb-0"
  >
    <dt
      class="col-9 mb-2"
    >
      <div>
        <button
          class="p-0 button focusable btn btn-link"
          id="applied-discount"
          tabindex="0"
          type="button"
        >
          <strong>
            Add discount
          </strong>
        </button>
      </div>
    </dt>
    <dd
      class="col-3 mb-2"
    >
      <span>
        -$5.00
      </span>
    </dd>
    <dt
      class="col-9 mb-2 grey"
    >
      Subtotal
    </dt>
    <dd
      class="col-3 mb-2"
    >
      <span>
        $0.00
      </span>
    </dd>
    <dt
      class="col-9 mb-2"
    >
      <div>
        <button
          class="p-0 focusable btn btn-link"
          id="shipping-lines"
          tabindex="0"
          type="button"
        >
          <strong>
            Add shipping
          </strong>
        </button>
      </div>
    </dt>
    <dd
      class="col-3 mb-2"
    >
      —
    </dd>
    <dt
      class="col-9 mb-2"
    >
      <span
        class="d-block"
      >
        <div>
          <button
            class="p-0 focusable btn btn-link"
            id="taxes"
            tabindex="0"
            type="button"
          >
            <strong>
              Taxes
            </strong>
          </button>
        </div>
      </span>
      <span
        class="d-block grey"
      >
        TVA
         
        20
        %
      </span>
    </dt>
    <dd
      class="col-3 mb-2"
    >
      <br />
      <span
        class="d-block text-muted"
      >
        <span>
          $0.00
        </span>
      </span>
    </dd>
    <dt
      class="col-9 mb-2"
    >
      Total
    </dt>
    <dd
      class="col-3 mb-2"
    >
      <strong
        class="text-muted"
      >
        <span>
          $9.99
        </span>
      </strong>
    </dd>
  </dl>
</div>
`;
